java8.spoofax3/test/statics/java/classes/nested/innerclassrefunbound.no.spt.bak
module classes/nested/innerclassrefunbound_no

language metaborg-java

test innerclassrefunbound [[

test;



// error: cannot find symbol

[A]
public class A {
}

[B]
public class B {}

[C]
public class C {
    public void m() {
        A a = new A();
        A.B ab = a.new B(); // B resolves in the type of a
    }
}


]] analysis fails
   run javacFails to ""
